--- a/ChoreChange/ChoreChange/ChoreChange.csproj
+++ b/ChoreChange/ChoreChange/ChoreChange.csproj
@@ -64,8 +64,10 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="Chore.cs" />
+    <Compile Include="ChoreListAdapter.cs" />
     <Compile Include="ConnectionString.cs" />
     <Compile Include="CustomAddChoreDialog.cs" />
+    <Compile Include="ParentDatabaseQueries.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="ParentAccount.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
@@ -130,6 +132,11 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\AddChoreDialog.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\CustomChoreList.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
