picture integration completed, added dates to cashout history

--- a/ChoreChange/ChoreChange/ChoreChange.csproj
+++ b/ChoreChange/ChoreChange/ChoreChange.csproj
@@ -81,12 +81,14 @@
     <Compile Include="CustomChildChoreClickDialog.cs" />
     <Compile Include="CustomParentChildListClickDialog.cs" />
     <Compile Include="CustomParentChoreListClickDialog.cs" />
+    <Compile Include="LoginActivity.cs" />
     <Compile Include="ParentChildrenActivity.cs" />
     <Compile Include="ParentChoresActivity.cs" />
     <Compile Include="ParentDatabaseQueries.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="ParentAccount.cs" />
     <Compile Include="ParentSettingsActivity.cs" />
+    <Compile Include="RegisterActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -240,6 +242,19 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\xml\file_paths.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\LoginPage.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ChoreChange.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\RegisterPage.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
