--- a/ChoreChange/ChoreChange/ChoreChange.csproj
+++ b/ChoreChange/ChoreChange/ChoreChange.csproj
@@ -38,6 +38,13 @@
     <AndroidUseSharedRuntime>True</AndroidUseSharedRuntime>
     <AndroidLinkMode>None</AndroidLinkMode>
     <EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
+    <AndroidEnableMultiDex>false</AndroidEnableMultiDex>
+    <Debugger>Xamarin</Debugger>
+    <MandroidI18n />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -67,6 +74,7 @@
     <Compile Include="ChildChoreActivity.cs" />
     <Compile Include="ChildDatabaseQueries.cs" />
     <Compile Include="ChildSettingsActivity.cs" />
+    <Compile Include="ComposeMessageDialog.cs" />
     <Compile Include="CustomChildCashoutHistoryDialog.cs" />
     <Compile Include="CustomParentCashOutHistoryDialog.cs" />
     <Compile Include="CashoutListAdapter.cs" />
@@ -146,7 +154,7 @@
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat">
       <Version>28.0.0.3</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ChoreChangeLogo.ico" />
@@ -256,6 +264,17 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\RegisterPage.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Accounts.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\message.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\ComposeMessageDialog.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
